adding a connect4 game using same AI, and rearanging package structure.